<resources>
    <string name="app_name">My Fisrt Clock</string>
    <string name="btnSubirHoras">+</string>
    <string name="btnSubirMinutos">+</string>
    <string name="btnSubirSegundos">+</string>
    <string name="btnBajarHoras">-</string>
    <string name="btnBajarMinutos">-</string>
    <string name="btnBajarSegundos">-</string>
    <string name="btnSet">ACEPTAR</string>
    <string name="btnVolver">VOLVER</string>
    <string name="tvDosPuntos">:</string>
    <string name="tvHorario">00</string>
    <string name="tvFinal">00:00:00</string>
</resources>